--- a/react-client/src/App.css
+++ b/react-client/src/App.css
@@ -1,42 +1,74 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  width: 100%;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 0.8em;
+  color: black;
+  background-color: white;
+  border-bottom: 1px solid black;
+}
+
+.heading {
+  font-weight: 600;
+  font-size: 25px;
+  font-family: 'Courier New', Courier, monospace;
+  text-transform: uppercase;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.grid-col {
+  padding: 2em;
+  background-color: white;
+}
+
+
+.dynamicImage {
+  display: block;
+  margin: 1em auto;
+}
+
+#name {
+  bottom: 0;
   text-align: center;
+  text-shadow: 1px 1px 2px black;
+  color: black;
+  font-family: cursive;
+  font-weight: 500;
+  text-transform: uppercase;
+  margin: 2em 0;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.box {
+  padding: 1em;
+  color: black;
+  background-color: white;
+  text-transform: uppercase;
+  font-size: 1rem;
+  font-weight: 700;
+  font-family:'Courier New', Courier, monospace;
+  border: 1px solid black;
+  border-radius: 6px;
+  box-shadow: -6px 6px 0 0 pink;
 }
 
-@keyframes logo-spin {
+.rotate {
+  animation: rotation 7s infinite linear;
+}
+
+@keyframes rotation {
   from {
     transform: rotate(0deg);
   }
   to {
-    transform: rotate(360deg);
+    transform: rotate(359deg);
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
