--- a/react-client/src/App.css
+++ b/react-client/src/App.css
@@ -2,6 +2,18 @@
   width: 100%;
 }
 
+.flex {
+  display: flex;
+}
+
+.relative {
+  position: relative;
+}
+
+.absolute {
+  position: absolute;
+}
+
 .container {
   display: flex;
   flex-direction: row;
@@ -48,6 +60,7 @@
 
 .box {
   padding: 1em;
+  margin-bottom: 60px;
   color: black;
   background-color: white;
   text-transform: uppercase;
@@ -56,7 +69,61 @@
   font-family:'Courier New', Courier, monospace;
   border: 1px solid black;
   border-radius: 6px;
-  box-shadow: -6px 6px 0 0 pink;
+  box-shadow: -5px 6px 0 0 pink, -4px 6px 1px 2px black;
+}
+
+.progressBar {
+  color: black;
+  font-family:'Courier New', Courier, monospace;
+  font-size: 1rem;
+  font-weight: 700;
+  width: 100%;
+  text-align: center;
+}
+
+.logo {
+  height: 300px;
+}
+
+.star {
+  height: 40px;
+  width: 40px;
+}
+
+#first-star{
+  top: 30px;
+  right: 180px;
+}
+
+#second-star {
+  top: 40px;
+  left: 170px;
+}
+
+#third-star {
+  top: 300px;
+  left: 150px;
+}
+
+progress {
+  width: 80%;
+  height: 18px;
+  margin: 0 10px;
+  box-shadow: 0px 2px 1px 1px black;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
+progress::-webkit-progress-bar {
+  background-color: yellow;
+}
+progress::-webkit-progress-value {
+  background-color: pink;
+  box-shadow: 1px 1px 5px 3px rgba( 255, 0, 0, 0.8 );
+}
+
+progress::-moz-progress-bar {
+  background-color: pink;
 }
 
 .rotate {
